@@ -1,7 +1,6 @@
 package org.ecommerce.backend.service;
 
 // Feature: admin-product-write, Task 2.3: Backend test — edit persists every change + Deletion Policy
-// Validates: Requirements 3.2, 3.3, 3.4, 4.2, 9.1, 9.2, 9.3, 9.6, 8.1
 
 import io.quarkus.test.TestTransaction;
 import io.quarkus.test.junit.QuarkusTest;
@@ -37,10 +36,9 @@ import static org.junit.jupiter.api.Assertions.assertNull;
  * Covers:
  * - Edit persists every change: add/remove variant, change price, scalar changes (Req 3.2, 3.3, 3.4, 4.2)
  * - Active-only editor/storefront reads exclude disabled variants (Req 9.6)
- * - Draft unreferenced hard delete (Req 9.1)
- * - Draft order-referenced soft delete (Req 9.3)
- * - Non-draft soft delete (Req 9.2)
- * - Whole-product deletion (Req 9.1, 9.2)
+ * - Unreferenced hard delete, any status (order history is the only bar to physical deletion)
+ * - Order-referenced soft delete / archive (Req 9.3)
+ * - Whole-product deletion
  * - Order/history preservation (Req 9.3)
  * - Real service coverage (Req 8.1)
  */
@@ -58,7 +56,7 @@ class ProductEditIntegrationTest
 
     // ─── Helpers ────────────────────────────────────────────────────────────
 
-    private ProductInformationDto createProduct(String marker, String status, int variantCount)
+    private ProductInformationDto createProduct(String marker, String status)
     {
         ProductDto product = new ProductDto();
         product.setName(marker + "Product");
@@ -68,7 +66,7 @@ class ProductEditIntegrationTest
         product.setStatus(status);
 
         List<ProductVariantDto> variants = new ArrayList<>();
-        for (int i = 0; i < variantCount; i++) {
+        for (int i = 0; i < 2; i++) {
             ProductVariantDto variant = new ProductVariantDto();
             variant.setSku(marker + "SKU-" + (char) ('A' + i) + "-" + UUID.randomUUID().toString().substring(0, 8));
             variant.setStockQuantity(10 + i * 5);
@@ -119,7 +117,7 @@ class ProductEditIntegrationTest
         String marker = "ZZED-CHNG-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create a product with 2 variants (ACTIVE so removal triggers soft-delete)
-        ProductInformationDto created = createProduct(marker, "ACTIVE", 2);
+        ProductInformationDto created = createProduct(marker, "ACTIVE");
         String productId = created.getProduct().getId();
         em.flush();
         em.clear();
@@ -154,8 +152,8 @@ class ProductEditIntegrationTest
         changedPrice.setPriceType("RETAIL_PRICE");
         changedPrice.setPrice(new BigDecimal("777.77"));
         // Use existing price id so it's an upsert
-        if (original.getVariants().get(0).getPrices() != null && !original.getVariants().get(0).getPrices().isEmpty()) {
-            changedPrice.setId(original.getVariants().get(0).getPrices().get(0).getId());
+        if (original.getVariants().getFirst().getPrices() != null && !original.getVariants().getFirst().getPrices().isEmpty()) {
+            changedPrice.setId(original.getVariants().getFirst().getPrices().getFirst().getId());
         }
         keptVariant.setPrices(List.of(changedPrice));
         keptVariant.setImages(List.of(new ProductImageDto(null, "/images/updated.jpg", 0, true)));
@@ -190,7 +188,7 @@ class ProductEditIntegrationTest
         // Active-only read: should have 2 variants (kept + new), removed variant absent
         assertThat(read.getVariants(), hasSize(2));
 
-        List<String> readSkus = read.getVariants().stream().map(v -> v.getSku()).toList();
+        List<String> readSkus = read.getVariants().stream().map(ProductVariantDto::getSku).toList();
         assertThat(readSkus, hasItem(variantToKeepSku));
         assertThat(readSkus, hasItem(newVariant.getSku()));
         assertThat(readSkus, not(hasItem(variantToRemoveSku)));
@@ -199,7 +197,7 @@ class ProductEditIntegrationTest
         ProductVariantDto readKeptVariant = read.getVariants().stream().filter(v -> v.getSku().equals(variantToKeepSku)).findFirst().orElseThrow();
         List<VariantPriceDto> retailPrices = readKeptVariant.getPrices().stream().filter(p -> "RETAIL_PRICE".equals(p.getPriceType())).toList();
         assertThat("Price updated, not duplicated", retailPrices, hasSize(1));
-        assertThat(retailPrices.get(0).getPrice().compareTo(new BigDecimal("777.77")), equalTo(0));
+        assertThat(retailPrices.getFirst().getPrice().compareTo(new BigDecimal("777.77")), equalTo(0));
 
         // Stock updated
         assertThat(readKeptVariant.getStockQuantity(), equalTo(99));
@@ -218,7 +216,7 @@ class ProductEditIntegrationTest
         String marker = "ZZED-SFRD-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create an ACTIVE product with 2 variants
-        ProductInformationDto created = createProduct(marker, "ACTIVE", 2);
+        ProductInformationDto created = createProduct(marker, "ACTIVE");
         String productId = created.getProduct().getId();
         String slug = created.getProduct().getSlug();
         em.flush();
@@ -235,13 +233,13 @@ class ProductEditIntegrationTest
         updateInput.getProduct().setStatus("ACTIVE");
 
         ProductVariantDto keptVariant = new ProductVariantDto();
-        keptVariant.setId(original.getVariants().get(0).getId());
+        keptVariant.setId(original.getVariants().getFirst().getId());
         keptVariant.setSku(variantToKeepSku);
-        keptVariant.setStockQuantity(original.getVariants().get(0).getStockQuantity());
+        keptVariant.setStockQuantity(original.getVariants().getFirst().getStockQuantity());
         VariantPriceDto price = new VariantPriceDto();
         price.setPriceType("RETAIL_PRICE");
-        price.setPrice(original.getVariants().get(0).getPrices().get(0).getPrice());
-        price.setId(original.getVariants().get(0).getPrices().get(0).getId());
+        price.setPrice(original.getVariants().getFirst().getPrices().getFirst().getPrice());
+        price.setId(original.getVariants().getFirst().getPrices().getFirst().getId());
         keptVariant.setPrices(List.of(price));
         keptVariant.setImages(List.of(new ProductImageDto(null, "/images/kept.jpg", 0, true)));
         updateInput.setVariants(List.of(keptVariant));
@@ -254,7 +252,7 @@ class ProductEditIntegrationTest
         ProductInformationDto storefrontRead = productService.getProductInformationBySlug(slug);
         assertNotNull(storefrontRead);
         assertThat(storefrontRead.getVariants(), hasSize(1));
-        assertThat(storefrontRead.getVariants().get(0).getSku(), equalTo(variantToKeepSku));
+        assertThat(storefrontRead.getVariants().getFirst().getSku(), equalTo(variantToKeepSku));
     }
 
     // ─── Deletion Policy: Variant removal ───────────────────────────────────
@@ -266,7 +264,7 @@ class ProductEditIntegrationTest
         String marker = "ZZED-DHRD-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create a PENDING (draft) product with 2 variants
-        ProductInformationDto created = createProduct(marker, "PENDING", 2);
+        ProductInformationDto created = createProduct(marker, "PENDING");
         String productId = created.getProduct().getId();
         em.flush();
         em.clear();
@@ -288,8 +286,8 @@ class ProductEditIntegrationTest
         kept.setStockQuantity(10);
         VariantPriceDto price = new VariantPriceDto();
         price.setPriceType("RETAIL_PRICE");
-        price.setPrice(original.getVariants().get(0).getPrices().get(0).getPrice());
-        price.setId(original.getVariants().get(0).getPrices().get(0).getId());
+        price.setPrice(original.getVariants().getFirst().getPrices().getFirst().getPrice());
+        price.setId(original.getVariants().getFirst().getPrices().getFirst().getId());
         kept.setPrices(List.of(price));
         kept.setImages(List.of(new ProductImageDto(null, "/images/kept.jpg", 0, true)));
         updateInput.setVariants(List.of(kept));
@@ -310,7 +308,7 @@ class ProductEditIntegrationTest
         String marker = "ZZED-DREF-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create a PENDING (draft) product with 2 variants
-        ProductInformationDto created = createProduct(marker, "PENDING", 2);
+        ProductInformationDto created = createProduct(marker, "PENDING");
         String productId = created.getProduct().getId();
         em.flush();
         em.clear();
@@ -337,8 +335,8 @@ class ProductEditIntegrationTest
         kept.setStockQuantity(10);
         VariantPriceDto price = new VariantPriceDto();
         price.setPriceType("RETAIL_PRICE");
-        price.setPrice(original.getVariants().get(0).getPrices().get(0).getPrice());
-        price.setId(original.getVariants().get(0).getPrices().get(0).getId());
+        price.setPrice(original.getVariants().getFirst().getPrices().getFirst().getPrice());
+        price.setId(original.getVariants().getFirst().getPrices().getFirst().getId());
         kept.setPrices(List.of(price));
         kept.setImages(List.of(new ProductImageDto(null, "/images/kept.jpg", 0, true)));
         updateInput.setVariants(List.of(kept));
@@ -360,7 +358,7 @@ class ProductEditIntegrationTest
         String marker = "ZZED-NDSD-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create an ACTIVE (non-draft) product with 2 variants
-        ProductInformationDto created = createProduct(marker, "ACTIVE", 2);
+        ProductInformationDto created = createProduct(marker, "ACTIVE");
         String productId = created.getProduct().getId();
         em.flush();
         em.clear();
@@ -382,8 +380,8 @@ class ProductEditIntegrationTest
         kept.setStockQuantity(10);
         VariantPriceDto price = new VariantPriceDto();
         price.setPriceType("RETAIL_PRICE");
-        price.setPrice(original.getVariants().get(0).getPrices().get(0).getPrice());
-        price.setId(original.getVariants().get(0).getPrices().get(0).getId());
+        price.setPrice(original.getVariants().getFirst().getPrices().getFirst().getPrice());
+        price.setId(original.getVariants().getFirst().getPrices().getFirst().getId());
         kept.setPrices(List.of(price));
         kept.setImages(List.of(new ProductImageDto(null, "/images/kept.jpg", 0, true)));
         updateInput.setVariants(List.of(kept));
@@ -400,7 +398,7 @@ class ProductEditIntegrationTest
         // Active-only read must NOT include the disabled variant
         ProductInformationDto read = productService.getProductInformationDto(productId);
         assertThat(read.getVariants(), hasSize(1));
-        assertThat(read.getVariants().get(0).getSku(), equalTo(variantToKeepSku));
+        assertThat(read.getVariants().getFirst().getSku(), equalTo(variantToKeepSku));
     }
 
     // ─── Deletion Policy: Whole-product deletion ────────────────────────────
@@ -412,7 +410,7 @@ class ProductEditIntegrationTest
         String marker = "ZZED-WPHD-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create a PENDING product with no order references
-        ProductInformationDto created = createProduct(marker, "PENDING", 2);
+        ProductInformationDto created = createProduct(marker, "PENDING");
         String productId = created.getProduct().getId();
         em.flush();
         em.clear();
@@ -435,12 +433,12 @@ class ProductEditIntegrationTest
 
     @Test
     @TestTransaction
-    void deletionPolicy_wholeProductDelete_activeProduct_softDeletes()
+    void deletionPolicy_wholeProductDelete_activeProductWithoutOrders_hardDeletes()
     {
         String marker = "ZZED-WPSD-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
-        // Create an ACTIVE product
-        ProductInformationDto created = createProduct(marker, "ACTIVE", 2);
+        // Create an ACTIVE product with no order references
+        ProductInformationDto created = createProduct(marker, "ACTIVE");
         String productId = created.getProduct().getId();
         em.flush();
         em.clear();
@@ -450,16 +448,14 @@ class ProductEditIntegrationTest
         em.flush();
         em.clear();
 
-        // Product must still exist with DISABLED status
+        // Order history is the only bar to physical deletion: an ACTIVE product
+        // with no ordered variants is hard-deleted like a draft.
         ProductEntity product = em.find(ProductEntity.class, UUID.fromString(productId));
-        assertNotNull(product, "ACTIVE product must NOT be hard-deleted");
-        assertThat(product.getStatus(), equalTo(ProductStatusEn.DISABLED));
+        assertNull(product, "ACTIVE product with no order references must be hard-deleted");
 
-        // All child variants that were ACTIVE must now be DISABLED
         for (ProductVariantDto v : created.getVariants()) {
             ProductVariantEntity variant = em.find(ProductVariantEntity.class, UUID.fromString(v.getId()));
-            assertNotNull(variant, "Variants of soft-deleted product must still exist");
-            assertThat(variant.getStatus(), equalTo(ProductStatusEn.DISABLED));
+            assertNull(variant, "Variants of hard-deleted product must also be physically removed");
         }
     }
 
@@ -470,12 +466,12 @@ class ProductEditIntegrationTest
         String marker = "ZZED-WPOR-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create a PENDING product
-        ProductInformationDto created = createProduct(marker, "PENDING", 2);
+        ProductInformationDto created = createProduct(marker, "PENDING");
         String productId = created.getProduct().getId();
         em.flush();
 
         // Insert an order referencing one of the variants
-        UUID referencedVariantId = UUID.fromString(created.getVariants().get(0).getId());
+        UUID referencedVariantId = UUID.fromString(created.getVariants().getFirst().getId());
         insertOrderReferencing(referencedVariantId);
         em.flush();
         em.clear();
@@ -507,7 +503,7 @@ class ProductEditIntegrationTest
         String marker = "ZZED-OHST-" + UUID.randomUUID().toString().substring(0, 6) + "-";
 
         // Create an ACTIVE product with 2 variants
-        ProductInformationDto created = createProduct(marker, "ACTIVE", 2);
+        ProductInformationDto created = createProduct(marker, "ACTIVE");
         String productId = created.getProduct().getId();
         em.flush();
 
@@ -527,13 +523,13 @@ class ProductEditIntegrationTest
 
         // Keep only variant 0
         ProductVariantDto kept = new ProductVariantDto();
-        kept.setId(original.getVariants().get(0).getId());
-        kept.setSku(original.getVariants().get(0).getSku());
-        kept.setStockQuantity(original.getVariants().get(0).getStockQuantity());
+        kept.setId(original.getVariants().getFirst().getId());
+        kept.setSku(original.getVariants().getFirst().getSku());
+        kept.setStockQuantity(original.getVariants().getFirst().getStockQuantity());
         VariantPriceDto price = new VariantPriceDto();
         price.setPriceType("RETAIL_PRICE");
-        price.setPrice(original.getVariants().get(0).getPrices().get(0).getPrice());
-        price.setId(original.getVariants().get(0).getPrices().get(0).getId());
+        price.setPrice(original.getVariants().getFirst().getPrices().getFirst().getPrice());
+        price.setId(original.getVariants().getFirst().getPrices().getFirst().getId());
         kept.setPrices(List.of(price));
         kept.setImages(List.of(new ProductImageDto(null, "/images/kept.jpg", 0, true)));
         updateInput.setVariants(List.of(kept));
