@@ -1,7 +1,6 @@
 package org.ecommerce.backend.service;
 
 // Feature: service-layer-refactor, Task 1.1: Characterization tests for product list-item mapping
-// Validates: Requirements 4.2, 4.4
 
 import io.quarkus.test.TestTransaction;
 import io.quarkus.test.junit.QuarkusTest;
@@ -144,7 +143,7 @@ class ProductListItemMappingCharacterizationIT
         var adminPage = productService.getAdminProductList(0, 100, null, null, null, marker);
         List<AdminProductListItemDto> psAdminList = adminPage.getContent();
         assertEquals(1, psAdminList.size(), "Exactly one product with our marker in admin list");
-        AdminProductListItemDto psAdmin = psAdminList.get(0);
+        AdminProductListItemDto psAdmin = psAdminList.getFirst();
 
         // Pin admin baseline from FeaturedProductService
         List<AdminProductListItemDto> fpsAdminList = featuredProductService.getFeaturedProductsForAdmin();
@@ -196,7 +195,7 @@ class ProductListItemMappingCharacterizationIT
 
         // Shopping baseline from ProductRepository via ProductService (ignoreStatus=false)
         List<ProductShoppingListItemDto> repoList = productService.getShoppingProducts(
-                pageRequest(0, 50), nameFilter(marker), false, null, null, null);
+                pageRequest(), nameFilter(marker), false, null, null, null);
         ProductShoppingListItemDto repoDto = repoList
                 .stream()
                 .filter(d -> d.getName()
@@ -204,7 +203,7 @@ class ProductListItemMappingCharacterizationIT
                 .findFirst().orElseThrow(() -> new AssertionError("ProductRepository shopping list missing product"));
 
         // Shopping baseline from ProductRepository via ProductService (ACTIVE-only, unconditional)
-        List<ProductShoppingListItemDto> repoIgnoreList = productService.getShoppingProducts(pageRequest(0, 50), nameFilter(marker), false, null, null, null);
+        List<ProductShoppingListItemDto> repoIgnoreList = productService.getShoppingProducts(pageRequest(), nameFilter(marker), false, null, null, null);
         ProductShoppingListItemDto repoIgnoreDto = repoIgnoreList
                 .stream()
                 .filter(d -> d.getName().startsWith(marker))
@@ -255,7 +254,7 @@ class ProductListItemMappingCharacterizationIT
 
         // Admin from ProductService
         var adminPage = productService.getAdminProductList(0, 100, null, null, null, marker);
-        AdminProductListItemDto psAdmin = adminPage.getContent().get(0);
+        AdminProductListItemDto psAdmin = adminPage.getContent().getFirst();
 
         // Admin from FeaturedProductService
         AdminProductListItemDto fpsAdmin = featuredProductService.getFeaturedProductsForAdmin().stream()
@@ -291,13 +290,13 @@ class ProductListItemMappingCharacterizationIT
                 .findFirst().orElseThrow();
 
         // ProductRepository shopping (ignoreStatus=false)
-        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(0, 50), nameFilter(marker), false, null, null, null)
+        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(), nameFilter(marker), false, null, null, null)
                 .stream()
                 .filter(d -> d.getName().startsWith(marker))
                 .findFirst().orElseThrow();
 
         // ProductRepository shopping (second call to confirm consistency)
-        ProductShoppingListItemDto repoIgnoreDto = productService.getShoppingProducts(pageRequest(0, 50), nameFilter(marker), false, null, null, null)
+        ProductShoppingListItemDto repoIgnoreDto = productService.getShoppingProducts(pageRequest(), nameFilter(marker), false, null, null, null)
                 .stream()
                 .filter(d -> d.getName().startsWith(marker))
                 .findFirst().orElseThrow();
@@ -329,7 +328,7 @@ class ProductListItemMappingCharacterizationIT
 
         // Admin from ProductService
         var adminPage = productService.getAdminProductList(0, 100, null, null, null, marker);
-        AdminProductListItemDto psAdmin = adminPage.getContent().get(0);
+        AdminProductListItemDto psAdmin = adminPage.getContent().getFirst();
 
         // Admin from FeaturedProductService
         AdminProductListItemDto fpsAdmin = featuredProductService.getFeaturedProductsForAdmin()
@@ -360,7 +359,7 @@ class ProductListItemMappingCharacterizationIT
         em.flush();
 
         var adminPage = productService.getAdminProductList(0, 100, null, null, null, marker);
-        AdminProductListItemDto psAdmin = adminPage.getContent().get(0);
+        AdminProductListItemDto psAdmin = adminPage.getContent().getFirst();
 
         AdminProductListItemDto fpsAdmin = featuredProductService.getFeaturedProductsForAdmin()
                 .stream()
@@ -392,7 +391,7 @@ class ProductListItemMappingCharacterizationIT
                 .findFirst()
                 .orElseThrow();
 
-        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(0, 50), nameFilter(marker), false, null, null, null)
+        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(), nameFilter(marker), false, null, null, null)
                 .stream()
                 .filter(d -> d.getName().startsWith(marker))
                 .findFirst().orElseThrow();
@@ -420,7 +419,7 @@ class ProductListItemMappingCharacterizationIT
         em.flush();
 
         var adminPage = productService.getAdminProductList(0, 100, null, null, null, marker);
-        AdminProductListItemDto psAdmin = adminPage.getContent().get(0);
+        AdminProductListItemDto psAdmin = adminPage.getContent().getFirst();
 
         AdminProductListItemDto fpsAdmin = featuredProductService.getFeaturedProductsForAdmin().stream()
                 .filter(d -> d.getName().startsWith(marker))
@@ -450,7 +449,7 @@ class ProductListItemMappingCharacterizationIT
 
         // Admin from ProductService (admin list shows all statuses)
         var adminPage = productService.getAdminProductList(0, 100, null, null, null, marker);
-        AdminProductListItemDto psAdmin = adminPage.getContent().get(0);
+        AdminProductListItemDto psAdmin = adminPage.getContent().getFirst();
 
         // Admin from FeaturedProductService (shows all featured regardless of status)
         AdminProductListItemDto fpsAdmin = featuredProductService.getFeaturedProductsForAdmin()
@@ -478,7 +477,7 @@ class ProductListItemMappingCharacterizationIT
 
         // With ignoreStatus removed, the ACTIVE product status filter is unconditional.
         // A PENDING product must NOT appear in storefront shopping results.
-        List<ProductShoppingListItemDto> repoList = productService.getShoppingProducts(pageRequest(0, 50), nameFilter(marker), false, null, null, null);
+        List<ProductShoppingListItemDto> repoList = productService.getShoppingProducts(pageRequest(), nameFilter(marker), false, null, null, null);
         boolean existsInStorefront = repoList
                 .stream()
                 .anyMatch(d -> d.getName().startsWith(marker));
@@ -510,7 +509,7 @@ class ProductListItemMappingCharacterizationIT
                 .filter(d -> d.getName().startsWith(marker))
                 .findFirst().orElseThrow();
 
-        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(0, 50), nameFilter(marker), false, null, null, null)
+        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(), nameFilter(marker), false, null, null, null)
                 .stream()
                 .filter(d -> d.getName().startsWith(marker))
                 .findFirst().orElseThrow();
@@ -548,7 +547,7 @@ class ProductListItemMappingCharacterizationIT
         em.flush();
 
         var adminPage = productService.getAdminProductList(0, 100, null, null, null, marker);
-        AdminProductListItemDto psAdmin = adminPage.getContent().get(0);
+        AdminProductListItemDto psAdmin = adminPage.getContent().getFirst();
 
         AdminProductListItemDto fpsAdmin = featuredProductService.getFeaturedProductsForAdmin()
                 .stream()
@@ -581,7 +580,7 @@ class ProductListItemMappingCharacterizationIT
         em.flush();
 
         // Shopping service always applies ACTIVE-only filtering (ignoreStatus removed)
-        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(0, 50), nameFilter(marker), false, null, null, null)
+        ProductShoppingListItemDto repoDto = productService.getShoppingProducts(pageRequest(), nameFilter(marker), false, null, null, null)
                 .stream()
                 .filter(d -> d.getName().startsWith(marker))
                 .findFirst().orElseThrow();
@@ -666,11 +665,11 @@ class ProductListItemMappingCharacterizationIT
         assertEquals(a.getPriceEndDate(), b.getPriceEndDate(), message + " [price.priceEndDate]");
     }
 
-    private org.ecommerce.common.query.PageRequest pageRequest(int pageIndex, int pageSize)
+    private org.ecommerce.common.query.PageRequest pageRequest()
     {
         org.ecommerce.common.query.PageRequest pr = new org.ecommerce.common.query.PageRequest();
-        pr.setPageIndex(pageIndex);
-        pr.setPageSize(pageSize);
+        pr.setPageIndex(0);
+        pr.setPageSize(50);
         return pr;
     }
 
